--- a/Problem2/MainWindow.xaml
+++ b/Problem2/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Problem2"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Viewbox Stretch="Uniform" VerticalAlignment="Top">
+    <Viewbox Stretch="Uniform">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="1*"/>
